--- a/style.css
+++ b/style.css
@@ -8,3 +8,14 @@
     margin-top: 30px;
     font-size: 60px;
 }
+
+.takmicari {
+    margin-left: 100px;
+    display: grid;
+    grid-template-columns: 300px 300px 300px;
+    grid-template-rows: 200px 200px 200px;
+    grid-row-gap: 100px;
+    grid-column-gap: 100px;
+    justify-content: center;
+    margin-top: 100px;
+}
