--- a/style.css
+++ b/style.css
@@ -19,3 +19,21 @@
     justify-content: center;
     margin-top: 100px;
 }
+
+#novi-button{
+    width: 250px;
+    margin-bottom: -10px;
+    margin-left: 510px;
+    font-size: 22px;
+}
+
+#forma-novi {
+    width: 400px;
+    margin-top: 30px;
+    margin-left: 430px;
+    font-size: 22px;
+}
+
+#dodajt-button{
+    font-size: 22px;
+}
