--- a/style.css
+++ b/style.css
@@ -51,3 +51,10 @@
 #p-btn {
     font-size: 20px;
 }
+
+#s-btn {
+    font-size: 20px;
+    margin-left: 550px;
+    margin-top: 10px;
+    width: 150px;
+}
